RESOLVED FIXED18383
[GTK] The "hovering-over-link" signal arguments aren't documented.
https://bugs.webkit.org/show_bug.cgi?id=18383
Summary [GTK] The "hovering-over-link" signal arguments aren't documented.
Carlos Martín Nieto
Reported 2008-04-09 06:53:06 PDT
As the title says, the arguments passed to the "hovering-over-link" signal callback aren't documented and you have to grep the source to figure out the order. This patch documents it. I can't see any option to attach the patch, so I'm posting it inline. I hope it doesn't get scrambled. Index: WebKit/gtk/webkit/webkitwebview.cpp =================================================================== --- WebKit/gtk/webkit/webkitwebview.cpp (revision 31670) +++ WebKit/gtk/webkit/webkitwebview.cpp (working copy) @@ -781,6 +781,14 @@ WEBKIT_TYPE_WEB_FRAME, G_TYPE_STRING); + /** + * WebKitWebView::hovering-over-link: + * @web_view: the object on which the signal is emitted + * @title: the link's title + * @uri: the URI the link points to + * + * When the cursor is over a link, this signal is emitted. + */ webkit_web_view_signals[HOVERING_OVER_LINK] = g_signal_new("hovering-over-link", G_TYPE_FROM_CLASS(webViewClass), (GSignalFlags)(G_SIGNAL_RUN_LAST | G_SIGNAL_ACTION),
Attachments
Document the "hoving-over-link" signal arguments. (777 bytes, patch)
2008-04-09 06:55 PDT, Carlos Martín Nieto
alp: review+
Carlos Martín Nieto
Comment 1 2008-04-09 06:55:19 PDT
Created attachment 20429 [details] Document the "hoving-over-link" signal arguments. Here is the upload. I think the inline one is damaged.
Jan Alonzo
Comment 2 2008-05-26 05:35:51 PDT
Hi Carlos Thanks for the patch. Can you please set the "Attachment Flags" to "r?", setting it for review so reviewers can review it? Thanks.
Carlos Martín Nieto
Comment 3 2008-05-26 08:15:17 PDT
Done. Thanks for telling me, I didn't know I had to do that.
Jan Alonzo
Comment 4 2008-05-30 07:17:53 PDT
Landed in r34263
Note You need to log in before you can comment on or make changes to this bug.