2008-05-30  Carlos Martín Nieto  <carlos@cmartin.tk>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18383
        [GTK] The "hovering-over-link" signal arguments aren't documented.

        * webkit/webkitwebview.cpp:


Canonical link: https://commits.webkit.org/26730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34263 268f45cc-cd09-0410-ab3c-d52691b4dbfc